Add aria-labelledby to room-join component input

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -78,7 +78,7 @@
   "home-page": {
     "accessibility-create": "Erstellt eine neue Sitzung.",
     "accessibility-join": "Betritt die Sitzung, deren Code du eingegeben hast.",
-    "accessibility-join-input": "Hier kannst du den Sitzungs Code der Sitzung eingeben der du beitreten möchtest.",
+    "accessibility-join-input": "Hier kannst du den Code der Sitzung eingeben der du beitreten möchtest.",
     "create-session": "Neue Sitzung",
     "created-1": "Die Sitzung '",
     "created-2": "' wurde erstellt.",
