Add aria-labelledby to register component input

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -145,11 +145,15 @@
     "cancel": "Zurück",
     "cancel-description": "Zurück",
     "email": "Adresse",
+    "email-description": "Gib hier deine E-Mail Adresse ein.",
+    "email-description-repeat": "Gib hier bitte erneut deine E-Mail Adresse ein um sicherzustellen dass du dich nicht vertippt hast.",
     "email-invalid": "Adresse ungültig",
     "email-required": "Adresse erforderlich",
     "email-unmatch": "Adressen stimmen nicht überein",
     "email-verify": "Adresse wiederholen",
     "password": "Passwort",
+    "password-description": "Gib hier dein Passwort ein.",
+    "password-description-repeat": "Gib hier bitte erneut dein Passwort ein um sicherzustellen dass du dich nicht vertippt hast.",
     "password-required": "Passwort erforderlich",
     "password-unmatch": "Passwörter stimmen nicht überein",
     "password-verify": "Passwort wiederholen",
