Add aria-labelledby to register component input

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -152,8 +152,8 @@
     "email-unmatch": "Adressen stimmen nicht überein",
     "email-verify": "Adresse wiederholen",
     "password": "Passwort",
-    "password-description": "Gib hier dein Passwort ein.",
-    "password-description-repeat": "Gib hier bitte erneut dein Passwort ein um sicherzustellen dass du dich nicht vertippt hast.",
+    "password-description": "Gib hier das Passwort mit dem du dich registrieren möchtest ein.",
+    "password-description-repeat": "Gib hier bitte erneut das Passwort mit dem du dich registrieren möchtest ein um sicherzustellen dass du dich nicht vertippt hast.",
     "password-required": "Passwort erforderlich",
     "password-unmatch": "Passwörter stimmen nicht überein",
     "password-verify": "Passwort wiederholen",
