--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -151,13 +151,15 @@
     "cancel": "Cancel",
     "cancel-description": "Cancel",
     "email": "E-mail",
-    "email-description": "",
-    "email-description-repeat": "",
+    "email-description": "Enter your e-mail address here.",
+    "email-description-repeat": "Please enter your e-mail address again to ensure that you have not mistyped.",
     "email-invalid": "E-mail is invalid.",
     "email-required": "E-mail required",
     "email-unmatch": "E-mails do not match.",
     "email-verify": "Verify e-mail",
     "password": "Password",
+    "password-description": "Enter the password you want to register with here.",
+    "password-description-repeat": "Please enter the password you want to register with again to make sure that you have not mistyped it.",
     "password-required": "Password required",
     "password-unmatch": "Passwords do not match.",
     "password-verify": "Verify password",
