Add aria-labelledby to create comment component input

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -17,6 +17,7 @@
   },
   "comment-page": {
     "abort": "Abbrechen",
+    "ask-question-description": "Gib hier deine Frage ein!",
     "acknowledge": "Erlauben",
     "cancel": "Zurück",
     "cancel-description": "Zurück",
