--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -18,6 +18,7 @@
   "comment-page": {
     "abort": "Cancel",
     "acknowledge": "Acknowledge",
+    "ask-question-description": "Enter your question here!",
     "cancel": "Cancel",
     "cancel-description": "Cancel",
     "comma": "Microsoft Excel",
