--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -104,7 +104,7 @@
     "a11y-moderator-email": "Gib die Adresse eines Benutzers ein, den du als Moderator hinzufügen möchtest.",
     "a11y-person": "Öffnet ein Fenster, um Moderatoren hinzuzufügen.",
     "a11y-question_answer": "Öffnet das Fragen-Board.",
-    "a11y-room-name": "Gib den Sitzungs-Code ein.",
+    "a11y-room-name": "Vergebe der Sitzung hier einen neuen Namen.",
     "a11y-settings": "Öffnet ein Fenster mit Optionen, die Sitzung zu verwalten, Fragen zu verwalten und Moderatoren hinzuzufügen.",
     "a11y-settings-comment-moderation": "Schieberegler für moderierte Fragen",
     "a11y-settings-direct-send": "Schieberegler, um Fragen sofort sichtbar zu machen.",
