--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -104,7 +104,7 @@
     "a11y-moderator-email": "Enter the email of the user you want to add as a moderator",
     "a11y-person": "Opens a window to add moderators",
     "a11y-question_answer": "Opens all questions asked about the session",
-    "a11y-room-name": "Type the Session ID",
+    "a11y-room-name": "Give the session a new name here.",
     "a11y-settings": "Opens a window with options to manage sessions, manage questions, and add moderators.",
     "a11y-settings-comment-moderation": "Slider to moderate Questions",
     "a11y-settings-direct-send": "Slider to send Questions directly to participant",
