Change introduction page layout to match other dialogs of the app
Also added a dedicated demo-i18n section.

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -55,7 +55,6 @@
     "accessibility-session": "Öffnet das Sitzungs-Menü",
     "account-deleted": "Dein Konto wurde gelöscht.",
     "back": "Zurück",
-    "close-demo": "Schließe die Einführung und gehe zurück zur Anmeldung.",
     "delete": "Löschen",
     "delete-account": "Konto löschen",
     "id": "Code",
@@ -94,6 +93,10 @@
     "close": "Schließen",
     "close-label": "Schließt das Impressum.",
     "title": "Impressum"
+  },
+  "introduction": {
+    "cancel": "zurück",
+    "cancel-description": "Schließe die Einführung und gehe zurück zur Anmeldung."
   },
   "login": {
     "activate": "Aktivieren",
