--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -57,7 +57,6 @@
     "accessibility-session": "Opens session menu",
     "account-deleted": "Your account has been deleted successfully.",
     "back": "Back",
-    "close-demo": "Close demo video and go back to login page",
     "delete": "Delete",
     "delete-account": "Delete account",
     "id": "ID",
@@ -97,6 +96,10 @@
     "close": "Close",
     "close-label": "Closes the imprint dialog",
     "title": "Imprint"
+  },
+  "introduction": {
+    "cancel": "Cancel",
+    "cancel-description": "Close demo video and go back to login page."
   },
   "login": {
     "activate": "Activate",
