Add aria-labelledby to participant and moderator comment-list component input

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -41,6 +41,7 @@
     "mark-wrong": "Frage verneinen",
     "no-comments": "Keine Fragen vorhanden.",
     "reject": "Unterbinden",
+    "search-box-input-description": "Hier kannst du nach Fragen suchen.",
     "semicolon": "Standard-CSV",
     "send": "Senden",
     "vote-down": "Runtervoten",
