--- a/src/assets/i18n/participant/de.json
+++ b/src/assets/i18n/participant/de.json
@@ -41,6 +41,7 @@
     "mark-not-wrong": "Dozent hat die Frage verneint",
     "mark-read": "Dozent hat die Frage im Hörsaal besprochen.",
     "no-comments": "",
+    "search-box-input-description": "Hier kannst du nach Fragen suchen.",
     "send": "Senden",
     "vote-down": "Runtervoten",
     "vote-up": "Hochvoten"
