--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -41,6 +41,7 @@
     "mark-wrong": "Mark as wrong",
     "no-comments": "No questions yet",
     "reject": "Reject",
+    "search-box-input-description": "Here you can search for questions.",
     "semicolon": "Standard CSV",
     "send": "Send",
     "vote-down": "Vote down",
