--- a/src/assets/i18n/participant/en.json
+++ b/src/assets/i18n/participant/en.json
@@ -41,6 +41,7 @@
     "mark-not-wrong": "Marked as wrong by the professor",
     "mark-read": "Already discussed by the professor",
     "no-comments": "No questions yet",
+    "search-box-input-description": "Here you can search for questions.",
     "send": "Send",
     "vote-down": "Vote down",
     "vote-up": "Vote up"
