--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -19,8 +19,8 @@
     "title": "Datenschutz"
   },
   "delete-account": {
-    "cancel": "Zurück",
-    "cancel-description": "Zurück",
+    "cancel": "Abbrechen",
+    "cancel-description": "Löschung des Kontos abbrechen",
     "delete": "Löschen",
     "delete-description": "Konto löschen"
   },
