Rename entry in header and home-page section of de.json and en.json

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -56,10 +56,10 @@
     "abort": "Abbrechen",
     "accessibility-back": "Führt zur vorherigen Seite",
     "accessibility-login": "Öffnet das Anmeldungs-Fenster.",
-    "accessibility-session": "Öffnet das Sitzungs-Menü",
+    "accessibility-session": "Öffnet das Sitzungs-Menü. Hier kannst du deine besuchten Sitzungen einsehen oder dich von deinem Konto abmelden.",
     "account-deleted": "Dein Konto wurde gelöscht.",
     "back": "Zurück",
-    "close-demo": "Schließe die Einführung und gehe zurück zur Anmeldung.",
+    "close-demo": "Schließe die Einführung und gehe zurück zur Startseite.",
     "delete": "Löschen",
     "delete-account": "Konto löschen",
     "id": "Code",
