Rename entry in session section of en.json

--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -202,7 +202,7 @@
   },
   "session": {
     "create-session": "Create session",
-    "description": "Description",
+    "description": "Session description",
     "join": "join session",
     "max-ls": "Max. characters:",
     "session-name": "Session name"
