Fix title in introduction dialog to correctly autofocus in dialog open

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -103,7 +103,8 @@
   },
   "introduction": {
     "cancel": "zurück",
-    "cancel-description": "Schließe die Einführung und gehe zurück zur Anmeldung."
+    "cancel-description": "Schließe die Einführung und gehe zurück zur Anmeldung.",
+    "title": "Einführung"
   },
   "login": {
     "activate": "Aktivieren",
