--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -11,7 +11,7 @@
     "a11y-keyboard_arrow_down": "Sortiert Fragen nach absteigenden Votes",
     "a11y-keyboard_arrow_up": "Sortiert Fragen nach aufsteigenden Votes",
     "a11y-not_interested": "Filtert alle verneinten Fragen",
-    "a11y-search_box": "Geben sie die gewünschte Frage ein",
+    "a11y-search_box": "Gib die gewünschte Frage ein",
     "a11y-swap_vert": "Option Fragen zu sortieren",
     "add-comment": "Frage stellen",
     "comment-sent": "Die Frage wurde veröffentlicht.",
@@ -31,7 +31,7 @@
   "comment-page": {
     "a11y-comment_delete": "Löscht diese Frage",
     "a11y-comment_grade": "Markiert diese Frage als Bonus Frage",
-    "a11y-comment_input": "Geben sie Ihre Frage ein",
+    "a11y-comment_input": "Gib deine Frage ein",
     "a11y-comment_marked_correct": "Hebt die Bejahung auf",
     "a11y-comment_marked_wrong": "Hebt die Verneinung auf",
     "a11y-comment_moderation": "Lehnt diese Frage ab",
