Edit remaining german texts from "Adresse" to "E-Mail Adresse"
I also let the screen reader read "E-Mail Adresse" aloud and it was fine

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -133,7 +133,7 @@
     "a11y-export-comments": "Exportiert alle Fragen.",
     "a11y-gavel": "Öffnet  das Moderations-Board.",
     "a11y-insert_comment": "Öffnet ein Fenster, um Fragen zu verwalten.",
-    "a11y-moderator-email": "Gib die Adresse eines Benutzers ein, den du als Moderator hinzufügen möchtest.",
+    "a11y-moderator-email": "Gib die E-Mail Adresse eines Benutzers ein, den du als Moderator hinzufügen möchtest.",
     "a11y-person": "Öffnet ein Fenster, um Moderatoren hinzuzufügen.",
     "a11y-question_answer": "Öffnet das Fragen-Board.",
     "a11y-room-name": "Vergebe der Sitzung hier einen neuen Namen.",
@@ -156,14 +156,14 @@
     "delete-room-description": "Sitzung löschen",
     "deleted": " gelöscht.",
     "description": "Beschreibung der Sitzung",
-    "email-error": "Adresse ist ungültig.",
+    "email-error": "E-Mail Adresse ist ungültig.",
     "export-comments": "Fragen exportieren",
     "general": "Sitzung",
     "live-feedback": "Live Feedback",
     "moderating-stream": "Moderation",
     "moderator-added": "Moderator wurde hinzugefügt.",
-    "moderator-email": "Adresse",
-    "moderator-not-found": "Kein Benutzer mit dieser Adresse gefunden.",
+    "moderator-email": "E-Mail Adresse",
+    "moderator-not-found": "Kein Benutzer mit dieser E-Mail Adresse gefunden.",
     "moderator-removed": "Moderator wurde entfernt.",
     "moderators": "Moderatoren",
     "no-moderators": "",
