change description for voting buttons

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -38,20 +38,20 @@
     "a11y-comment_not_grade": "Hebt die Bonus Markierung auf",
     "a11y-comment_not_marked_correct": "Bejaht diese Frage",
     "a11y-comment_not_marked_wrong": "Verneint diese Frage",
-    "a11y-comment_vote_down": "Stimmt dieser Frage ab",
-    "a11y-comment_vote_up": "Stimmt dieser Frage zu",
+    "a11y-comment_vote_down": "Diese Frage runter woten",
+    "a11y-comment_vote_up": "Diese Frage hoch woten",
     "a11y-text_correct": "Diese Frage wurde bejaht.",
     "a11y-text_grade": "Diese Frage wurde als Bonus Frage markiert.",
     "a11y-text_read": "Diese Frage wurde in Vollansicht am Beamer besprochen.",
-    "a11y-text_textForOneVote": "Stimme",
-    "a11y-text_textForVotes": "Stimmen",
+    "a11y-text_textForOneVote": " Ein ,Vote",
+    "a11y-text_textForVotes": ",Wouuts",
     "a11y-text_wrong": "Diese Frage wurde verneint.",
     "abort": "Abbrechen",
     "ask-question-description": "Gib hier deine Frage ein!",
     "acknowledge": "Erlauben",
     "cancel": "Zurück",
     "cancel-description": "Zurück",
-    "comment": "Die Frage {{ comment }} wurde um {{ time }} Uhr gestellt und hat derzeitig {{ votes }} {{textForVotes}}. {{correct}} {{wrong}} {{bonus}} {{beamer}}",
+    "comment": "Die Frage {{ comment }} wurde um {{ time }} Uhr gestellt und hat derzeitig {{ votes }}. {{correct}} {{wrong}} {{bonus}} {{beamer}}",
     "comma": "Microsoft Excel",
     "delete": "Frage löschen",
     "delimiter": "Bitte wähle ein Format!",
