--- a/src/assets/i18n/participant/en.json
+++ b/src/assets/i18n/participant/en.json
@@ -45,14 +45,14 @@
     "a11y-text_correct": "This question was marked as correct.",
     "a11y-text_grade": "This question was marked as a bonus question.",
     "a11y-text_read": "This question was discussed in full view on the beamer",
-    "a11y-text_textForOneVote": "Vote",
-    "a11y-text_textForVotes": "Votes",
+    "a11y-text_textForOneVote": "One ,Vote",
+    "a11y-text_textForVotes": ",Votes",
     "a11y-text_wrong": "This question was marked as not correct.",
     "abort": "Cancel",
     "ask-question-description": "Enter your question here!",
     "cancel": "Cancel",
     "cancel-description": "Cancel",
-    "comment": "Question {{ comment }} was asked at {{ time }} and has currently {{ votes }} {{textForVotes}}. {{correct}} {{wrong}} {{bonus}} {{beamer}}",
+    "comment": "Question {{ comment }} was asked at {{ time }} and has currently {{ votes }}. {{correct}} {{wrong}} {{bonus}} {{beamer}}",
     "enter-comment": "Your question",
     "enter-title": "Title",
     "error-both-fields": "Please fill in all fields.",
