--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -43,8 +43,8 @@
     "a11y-text_correct": "This question was marked as correct.",
     "a11y-text_grade": "This question was marked as a bonus question.",
     "a11y-text_read": "This question was discussed in full view on the beamer",
-    "a11y-text_textForOneVote": "Vote",
-    "a11y-text_textForVotes": "Votes",
+    "a11y-text_textForOneVote": "One ,Vote",
+    "a11y-text_textForVotes": ",Votes",
     "a11y-text_wrong": "This question was marked as not correct.",
     "abort": "Cancel",
     "acknowledge": "Acknowledge",
@@ -52,7 +52,7 @@
     "cancel": "Cancel",
     "cancel-description": "Cancel",
     "comma": "Microsoft Excel",
-    "comment": "Question {{ comment }} was asked at {{ time }} and has currently {{ votes }} {{textForVotes}}. {{correct}} {{wrong}} {{bonus}} {{beamer}}",
+    "comment": "Question {{ comment }} was asked at {{ time }} and has currently {{ votes }}. {{correct}} {{wrong}} {{bonus}} {{beamer}}",
     "delete": "Delete question",
     "delimiter": "Please choose a format!",
     "enter-comment": "Question",
