--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -7,12 +7,6 @@
     "info-label": "Open a dialog with the frag.jetzt privacy policy.",
     "title": "Cookies"
   },
-  "overlay": {
-    "cancel": "Change settings",
-    "cancel-description": "Open the cookie setting dialog",
-    "message": "You have declined cookie usage for this app, thus you can not use it for the time being.",
-    "title": "Cannot use app"
-  },
   "data-protection": {
     "cancel": "Reject",
     "cancel-description": "Reject the app's privacy policy and close dialog",
@@ -103,11 +97,6 @@
     "title": "Why »frag.jetzt« (»ask.now«)"
   },
   "login": {
-    "activate": "Activate",
-    "activation-key": "Activation key",
-    "activation-key-incorrect": "Activation key is incorrect.",
-    "activation-key-required": "Activation key required",
-    "activation-key-input-description": "Enter the activation key that you received by e-mail.",
     "cancel": "Cancel",
     "cancel-description": "Cancel",
     "email": "E-mail",
@@ -115,12 +104,13 @@
     "email-invalid": "E-mail is invalid",
     "email-required": "E-mail required",
     "guest-login": "Log in as a guest",
+    "guest-login-description": "Log in as a guest",
     "guest-login-tooltip": "Created sessions will be deleted after logout. Sessions created with an account are saved for 180 days after the last visit.",
     "header": "Log in",
     "input-incorrect": "Please check your data.",
     "login": "Log in with account",
     "login-data-incorrect": "Username or password incorrect",
-    "login-description": "Log in with your account",
+    "login-description": "Log in with the entered account data",
     "login-successful": "Login successful",
     "login-tooltip": "Sessions will be stored for 180 days.",
     "not-registered": "Don't have an account yet?",
@@ -130,6 +120,12 @@
     "password-reset": "Forgot your password?",
     "register": "Register",
     "welcome": "Ask online & vote questions"
+  },
+  "overlay": {
+    "cancel": "Change settings",
+    "cancel-description": "Open the cookie setting dialog",
+    "message": "You have declined cookie usage for this app, thus you can not use it for the time being.",
+    "title": "Cannot use app"
   },
   "password-reset": {
     "cancel": "Cancel",
@@ -144,9 +140,11 @@
     "key-required": "Reset key required",
     "new-password": "New password",
     "new-password-successful": "The new password has been set.",
+    "reset-button-description": "Resets the password of the account",
     "reset-password": "Reset password",
     "reset-password-description": "Reset password",
     "reset-successful": "Password was reset. Please check your mails.",
+    "set-button-description": "Set the new password for the account",
     "set-new-password": "Set new password with the reset key",
     "set-new-password-button": "Set password"
   },
@@ -202,5 +200,15 @@
     "join": "join session",
     "max-ls": "Max. characters:",
     "session-name": "Session name"
+  },
+  "user-activation": {
+    "activate": "Activate",
+    "activate-description": "Activates the account",
+    "activation-key": "Activation key",
+    "activation-key-incorrect": "Activation key is incorrect.",
+    "activation-key-required": "Activation key required",
+    "activation-key-input-description": "Enter the activation key that you received by e-mail.",
+    "cancel": "Cancel",
+    "cancel-description": "Cancel"
   }
 }
