--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -180,14 +180,14 @@
   "room-list": {
     "creator-role": "Sitzungsersteller",
     "entry": "Eintrag ",
-    "filter": "In diesem Textfeld kannst du die besuchten Sitzungen nach dessen Name oder Sitzungscode filtern.",
-    "filter-message": "Nach Name oder Sitzungs-Code filtern",
-    "join-message-template": "Sitzung {{session}} mit dem Code {{id}} und in der Rolle {{role}} beitreten.",
+    "filter": "In diesem Textfeld kannst du die besuchten Sitzungen nach Name oder Code filtern.",
+    "filter-message": "Nach Name oder Code filtern",
+    "join-message-template": "An der Sitzung {{session}} mit dem Code {{id}} und in der Rolle {{role}} teilnehmen.",
     "moderator-role": "Moderator",
     "no-room-history": "Du hast bisher an keiner Sitzung teilgenommen.",
-    "panel-join-button": "Sitzung beitreten",
-    "panel-session-id": "Sitzung",
-    "panel-session-name": "Name",
+    "panel-join-button": "Teilnehmen",
+    "panel-session-id": "Code",
+    "panel-session-name": "Sitzung",
     "panel-user-role": "Rolle",
     "participant-role": "Teilnehmer",
     "session-history": "Dein Sitzungsverlauf enthält {{count}} Sitzungen.",
