add a11y to the password reset button and to the email input for set a new password

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -132,6 +132,8 @@
     "welcome": "Online fragen & Fragen bewerten"
   },
   "password-reset": {
+    "a11y-password_reset_button": "Setzt das passwort zurück",
+    "a11y-password_set_email": "Gib hier deine E-Mail Adresse ein, um ein neues Passwort zu setzten",
     "cancel": "Zurück",
     "cancel-description": "Zurück",
     "email": "E-Mail Adresse",
