--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -132,6 +132,7 @@
     "welcome": "Online fragen & Fragen bewerten"
   },
   "password-reset": {
+    "a11y-new_password1": "Gib hier dein neues Passwort ein",
     "a11y-password_reset_button": "Setzt das passwort zurück",
     "a11y-password_set_email": "Gib hier deine E-Mail Adresse ein, um ein neues Passwort zu setzten",
     "cancel": "Zurück",
