--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -133,7 +133,9 @@
   },
   "password-reset": {
     "a11y-new_password1": "Gib hier dein neues Passwort ein",
+    "a11y-new_password2": "Gib hier erneut dein neues Passwort ein",
     "a11y-password_reset_button": "Setzt das passwort zurück",
+    "a11y-password_reset_key": "Gib hier den Passwortrücksetz-Schlüssel ein, den du per E-Mail erhalten hast",
     "a11y-password_set_email": "Gib hier deine E-Mail Adresse ein, um ein neues Passwort zu setzten",
     "cancel": "Zurück",
     "cancel-description": "Zurück",
