--- a/src/assets/i18n/participant/de.json
+++ b/src/assets/i18n/participant/de.json
@@ -58,6 +58,7 @@
     "error-both-fields": "Bitte fülle alle Felder aus.",
     "error-comment": "Bitte gib deine Frage ein.",
     "error-title": "Bitte gib einen Titel ein.",
+    "exit-description": "Kommentar-Präsentationsmodus verlassen",
     "mark-not-correct": "Dozent hat die Frage bejaht.",
     "mark-not-favorite": "Bonus-Frage: Dozent hält die Frage für besonders interessant.",
     "mark-not-wrong": "Dozent hat die Frage verneint",
@@ -66,8 +67,15 @@
     "no-comments": "",
     "search-box-input-description": "Hier kannst du nach Fragen suchen.",
     "send": "Senden",
+    "send-description": "Frage abschicken",
     "vote-down": "Frage abwerten",
     "vote-up": "Frage aufwerten"
+  },
+  "delete-account": {
+    "cancel": "Abbrechen",
+    "cancel-description": "Löschung des Kontos abbrechen",
+    "delete": "Löschen",
+    "delete-description": "Konto löschen"
   },
   "home-page": {
     "exactly-8": "Ein Sitzungs-Code hat genau 8 Ziffern.",
