add live announcer to delete account

--- a/src/assets/i18n/home/de.json
+++ b/src/assets/i18n/home/de.json
@@ -47,6 +47,7 @@
     "style": "Anzeige"
   },
   "header": {
+    "a11y-delete_account": "Willst du dein Konto mit allen Sitzungen unwiderruflich löschen?",
     "abort": "Abbrechen",
     "accessibility-back": "Führt zur vorherigen Seite",
     "accessibility-login": "Öffnet das Anmeldungs-Fenster.",
